--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,17 @@
     </head>
     <body>
         <p> Welcome to chat app</p>
+
+    <script src="socket.io/socket.io.js"></script>    
+    <script>
+        // initiate the request and keep the connection open
+        var socket = io();
+        socket.on('connect', ()=>{
+            console.log('Connected to server!');
+        });
+        socket.on('disconnect', ()=>{
+            console.log('Disconnected from server!');
+        });
+    </script>
     </body>
 </html>
