--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,18 @@
                     <label>Room name</label>
                     <input type="text" name="room"/>
                 </div>
+                <div class="form-field" id="rooms">
+                    
+                </div>
                 <div class="form-field">
                     <button>Join</button>
                 </div>
         </form>
         </div> 
+
+        <script src="socket.io/socket.io.js"></script>    
+        <script src="js/libs/jquery-3.3.1.min.js"></script>
+        <script src="js/libs/mustache.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
